# Infectious-Disease-Simulation

./: CMakeLists.txt
experiments/: experiment1.cpp  experiment2.cpp  experiment3.cpp
plots/: plot1.py  plot2.py  plot3.py
source/: disease.cpp  disease.hpp  generate.hpp  person.cpp  person.hpp  population.cpp  population.hpp
tests/: tests.cpp
